--- a/plugins/Visar/Visar1.ui
+++ b/plugins/Visar/Visar1.ui
@@ -729,12 +729,10 @@
    <addaction name="separator"/>
    <addaction name="actionGuess"/>
    <addaction name="actionRefresh"/>
-   <addaction name="separator"/>
-   <addaction name="showFiltered"/>
   </widget>
   <action name="actionSaveTxt">
    <property name="icon">
-    <iconset resource="../../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-cDUc1L/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">
      <normaloff>:/icons/saveTxt.png</normaloff>:/icons/saveTxt.png</iconset>
    </property>
    <property name="text">
@@ -770,7 +768,7 @@
   </action>
   <action name="actionCopy">
    <property name="icon">
-    <iconset resource="../../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-cDUc1L/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">
      <normaloff>:/icons/saveClipboard.png</normaloff>:/icons/saveClipboard.png</iconset>
    </property>
    <property name="text">
@@ -782,7 +780,7 @@
   </action>
   <action name="actionRect3">
    <property name="icon">
-    <iconset resource="../../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-cDUc1L/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">
      <normaloff>:/icons/rect.png</normaloff>:/icons/rect.png</iconset>
    </property>
    <property name="text">
@@ -794,7 +792,7 @@
   </action>
   <action name="actionSaveTxtMultiple">
    <property name="icon">
-    <iconset resource="../../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-cDUc1L/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">
      <normaloff>:/icons/saveTxtMultiple.png</normaloff>:/icons/saveTxtMultiple.png</iconset>
    </property>
    <property name="text">
@@ -804,21 +802,9 @@
     <string>Export all curves in TXT</string>
    </property>
   </action>
-  <action name="showFiltered">
-   <property name="icon">
-    <iconset resource="../../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-cDUc1L/src/qrc/icons.qrc">
-     <normaloff>:/icons/eye.png</normaloff>:/icons/eye.png</iconset>
-   </property>
-   <property name="text">
-    <string>showFiltered</string>
-   </property>
-   <property name="toolTip">
-    <string>Show filtered images</string>
-   </property>
-  </action>
   <action name="actionAddVisar">
    <property name="icon">
-    <iconset resource="../../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-cDUc1L/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">
      <normaloff>:/icons/plus.png</normaloff>:/icons/plus.png</iconset>
    </property>
    <property name="text">
@@ -830,7 +816,7 @@
   </action>
   <action name="actionDelVisar">
    <property name="icon">
-    <iconset resource="../../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-cDUc1L/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">
      <normaloff>:/icons/remove.png</normaloff>:/icons/remove.png</iconset>
    </property>
    <property name="text">
@@ -875,7 +861,7 @@
   <tabstop>etalon_sensitivity</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-cDUc1L/src/qrc/icons.qrc"/>
+  <include location="../../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc"/>
   <include location="../GhostFringes/GhostFringes.qrc"/>
   <include location="Visar.qrc"/>
  </resources>
