--- a/plugins/Visar/Visar1.ui
+++ b/plugins/Visar/Visar1.ui
@@ -53,7 +53,7 @@
        <enum>QTabWidget::West</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <property name="neutrinoSave" stdset="0">
        <bool>true</bool>
@@ -620,13 +620,19 @@
               <string>%</string>
              </property>
              <property name="decimals">
-              <number>2</number>
+              <number>6</number>
+             </property>
+             <property name="minimum">
+              <double>-9.999900000000000</double>
              </property>
              <property name="maximum">
               <double>9.990000000000000</double>
              </property>
              <property name="singleStep">
-              <double>0.100000000000000</double>
+              <double>0.010000000000000</double>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
@@ -643,6 +649,9 @@
              </property>
              <property name="value">
               <double>1.500000000000000</double>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
@@ -666,6 +675,9 @@
              <property name="value">
               <double>10.000000000000000</double>
              </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
            <item row="0" column="1">
@@ -684,6 +696,9 @@
              </property>
              <property name="value">
               <double>532.000000000000000</double>
+             </property>
+             <property name="neutrinoSave" stdset="0">
+              <bool>true</bool>
              </property>
             </widget>
            </item>
