--- a/UIs/nAbout.ui
+++ b/UIs/nAbout.ui
@@ -68,7 +68,7 @@
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap resource="../resources/icons/icons.qrc">:/icons/icon.png</pixmap>
+         <pixmap resource="../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc">:/icons/icon.png</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
@@ -219,7 +219,7 @@ p, li { white-space: pre-wrap; }
   </layout>
  </widget>
  <resources>
-  <include location="../resources/icons/icons.qrc"/>
+  <include location="../../build-neutrinoMaster-Brew-Default/src/qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
