--- a/UIs/nWinList.ui
+++ b/UIs/nWinList.ui
@@ -23,7 +23,7 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0">
+   <layout class="QGridLayout" name="gridLayout" rowstretch="0,0">
     <property name="leftMargin">
      <number>0</number>
     </property>
@@ -145,24 +145,6 @@
      </widget>
     </item>
     <item row="1" column="0">
-     <widget class="QListWidget" name="pans">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="frameShape">
-       <enum>QFrame::NoFrame</enum>
-      </property>
-      <property name="alternatingRowColors">
-       <bool>true</bool>
-      </property>
-      <property name="sortingEnabled">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
      <widget class="QLineEdit" name="lineEdit">
       <property name="font">
        <font>
@@ -201,7 +183,6 @@
    <addaction name="actionOrigin"/>
    <addaction name="actionScale"/>
    <addaction name="actionFreeze"/>
-   <addaction name="actionPans"/>
   </widget>
   <action name="actionCopy">
    <property name="icon">
@@ -275,24 +256,12 @@
     <string>Change scale</string>
    </property>
   </action>
-  <action name="actionPans">
-   <property name="checkable">
-    <bool>true</bool>
-   </property>
-   <property name="icon">
-    <iconset>
-     <normaloff>:icons//winlist.png</normaloff>:icons//winlist.png</iconset>
-   </property>
-   <property name="text">
-    <string>Pans</string>
-   </property>
-  </action>
   <action name="actionFreeze">
    <property name="checkable">
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+    <iconset>
      <normaloff>:/icons/lockOpen.png</normaloff>
      <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
    </property>
@@ -311,41 +280,6 @@
    <header location="global">../src/pans/winlist/nTreeWidget.h</header>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
- </resources>
- <connections>
-  <connection>
-   <sender>actionPans</sender>
-   <signal>triggered(bool)</signal>
-   <receiver>pans</receiver>
-   <slot>setVisible(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>167</x>
-     <y>295</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>actionPans</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>images</receiver>
-   <slot>setHidden(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>-1</x>
-     <y>-1</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>145</x>
-     <y>69</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <resources/>
+ <connections/>
 </ui>
